Resources/IAC-DNS/infrastructure/projects/clamav/tcp-ingressroute.yaml
# ClamAV TCP IngressRoute
# Routes TCP traffic on port 3310 to the ClamAV service
# Allows external clients to connect to ClamAV for virus scanning
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: clamav-tcp
  namespace: clamav
spec:
  entryPoints:
    - clamav
  routes:
    - match: HostSNI(`*`)
      services:
        - name: clamav
          port: 3310
